# PyFVS

./: .coveragerc  .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  CMakeLists.txt.in  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  appveyor.yml  build.bat  build_notes.md  build_notes.txt  cross_file.ini  environment.yml  meson.build  meson_options.txt  mirror_notes.txt  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
_build_utils/: convert_f77.py  gcc_build_bitness.py  make_globals_f90.py  strip_common.py
ak/: estab.f  forkod.f  grinit.f  sitset.f
api/: carbon_data.f90  common.f90  downwood_data.f90  fvs_api.f90  fvs_step.f90  globals.f90  globals.f90.in  inventory_trees.f90  morts_wc_fvs.f  morts_wrap.f90  prtrls_wrap.f90  snag_data.f90  tree_data.f90  version.f90
api/variant/pn/: morts_fvs.f
base/: disply.f  exdbs.f  exdbsqlite.f  fortyp.f  initre.f  keywds.f  stats.f
base/src/: cuts.f  evldx.f  intree.f  revise.f  sdical.f  sstage.f
bm/: grinit.f
build_fvs/: CMakeLists.txt  CMakeLists.txt.in
ca/: blkdat.f  grinit.f  sitset.f
changeNotes/: 2017.09.15_ldavid.txt  2018.03.07_ldavid.txt  2018.08.03_ckeyser.txt  2019.07.30_mshettles.txt  2019.08.14_mshettles.txt.txt  2021.05.04_ldavid.txt
ci/: blkdat.f  grinit.f
common/: CONTRL.F77  INCLUDESVN.F77  VARCOM.F77
cr/: blkdat.f  grinit.f  sitset.f
cs/: grinit.f  sitset.f
cs/src/: blkdat.f  dgf.f  sitset.f
dbs/: dbsatrtls.f  dbscuts.f  dbstrls.f
dbs/src/: dbsstandin.f
dbsqlite/: DBSCOM.F77  dbscase.f  dbscmpu.f  dbsin.f  dbsingrow.f  dbsinit.f  dbsplothab.f  dbsppget.f  dbsppput.f  dbssprt.f  dbsstats.f  dbstally.f
docs/: conf.py  index.md
ec/: grinit.f
em/: blkdat.f  grinit.f
estb/: estab.f  esuckr.f
ie/: grinit.f
kt/: grinit.f
ls/: estab.f  grinit.f  sitset.f
ls/src/: dgf.f
nc/: blkdat.f  forkod.f  grinit.f  sitset.f
ne/: grinit.f  sitset.f
notebooks/: fia_data.ipynb  fvs_api.ipynb
oc/: blkdat.f  grinit.f
oc/src/: htgf.f
op/: blkdat.f  grinit.f
op/src/: htgf.f
open-fvs/: CMakeLists.txt  CMakeLists.txt.in
open-fvs/base/: cmdline.f  filopn.f  fvs.f  grincr.f  intree.f  keywds.f  svblkd.f  tregro.f
open-fvs/ca/: blkdat.f  cubrds.f  htcalc.f
open-fvs/canada/bc/: esinit.f
open-fvs/canada/on/: cuts.f
open-fvs/ci/: esinit.f
open-fvs/dbs/: dbsblkd.f
open-fvs/dbsqlite/: dbsblkd.f  fvsqlite3.f
open-fvs/dfb/: dfblkd.f  dfblkdbm.f  dfblkdcr.f  dfblkdec.f  dfblkdie.f  dfblkdpn.f
open-fvs/ec/: cubrds.f  htcalc.f
open-fvs/estb/: esinit.f
open-fvs/fire/ca/: fmcblk.f
open-fvs/fire/fofem/: bur_bov.f  bur_brn.f  fm_fofem.f  fof_bcm.f  fof_ci.f  fof_cm.f  fof_co.f  fof_duf.f  fof_hsf.f  fof_lem.f  fof_mrt.f  fof_sd.f  fof_se.f  fof_sgv.f  fof_sh.f  fof_sha.f  fof_soi.f  fof_unix.f  fof_util.f
open-fvs/ie/: rcon.f
open-fvs/metric/base/: filopn.f
open-fvs/oc/: blkdat.f
open-fvs/op/: blkdat.f
open-fvs/pg/: getstd.f
open-fvs/pn/: blkdat.f  htcalc.f
open-fvs/sn/: blkdat.f  cubrds.f
open-fvs/so/: blkdat.f  cubrds.f  dgdriv.f  htcalc.f
open-fvs/strp/: esblkd.f  esinit.f
open-fvs/vbase/: cuts.f  initre.f  revise.f
open-fvs/volume/: mrules.f
open-fvs/wc/: blkdat.f  cubrds.f  htcalc.f
pn/: blkdat.f  grinit.f
pyfvs/: README.md  __init__.py  __main__.py  _version.py  config_default.yaml  fvs.py  meson.build  variants.py.in
pyfvs/keywords/: keywords.py
pyfvs/test/: debug.py  export_fia.py  fia_test.db  test_api.py  test_fia.py  test_fvstrees.py  test_inv_trees.py  test_reg_trees.py  test_treedata.py  test_variants.py
pyfvs/test/notebooks/: benchmark.ipynb  init_trees.ipynb  inspect_treedata.ipynb
pyfvs/test/rmrs/: bm_bareground.key  ca_bareground.sum.save  nc_bareground.key  nc_bareground.sum.save  nct01.key  pn_bareground.sum.save  so_bareground.sum.save  wc_bareground.sum.save
rd/: rddout.f
sn/: cratet.f  grinit.f  morts.f  sitset.f
so/: forkod.f  grinit.f  sitset.f
strp/: estab.f  esuckr.f
test/: debug_variant.py  nc_carbon.key  test_morts.py
tests/: bg_test.key  conftest.py  pytest.ini  test_debug.py  test_fia.py  test_fvs_fmsc.py  test_fvstrees.py  test_inv_trees.py  test_treedata.py  test_variants.py
tests/FVSbc/: FVS-BC.Stand.Structure.Out.db  FVS-BC.YSM-SkyRanch.Out.db  StandStructure.sum.save  YSM-SkyRanch.sum.save
tests/FVSbcc/: makefile
tests/FVSbmc/: makefile
tests/FVScac/: makefile
tests/FVScic/: makefile
tests/FVScrc/: makefile
tests/FVSecc/: makefile
tests/FVSemc/: makefile
tests/FVSie/: fireTest.db_dump.txt.save  fireTest.key  ie.key
tests/FVSiec/: makefile
tests/FVSktc/: makefile
tests/FVSncc/: makefile
tests/FVSpnc/: makefile  pnt01.sum.save
tests/FVSsoc/: makefile
tests/FVSttc/: makefile
tests/FVSutc/: makefile  utt01.sum
tests/FVSwcc/: makefile  wct01.sum.save
tests/FVSwsc/: makefile  wst01.sum.save
tests/ODBC/sqlite/: makefile
tests/qFVScr/: CalibStats_dump.txt.save
tests/qFVSie/: makefile
tests/qFVSsn/: snout.txt.save
tests/reg_test/: regen_rx.xlsx
tests/rmrs/: akt01.key  akt01.sum.save  akt01.tre  cit01.key  cit01.sum.save  cit01.tre  iet01.key  iet01.sum.save  iet01.tre  nct01.sum.save  oc_bareground.sum.save  op_bareground.sum.save  refresh_rmrs.bat  wc_bareground.sum.save  wst01.key  wst01.sum.save  wst01.tre
tt/: grinit.f  sitset.f
ut/: grinit.f  sitset.f
vbase/: cuts.f  initre.f  revise.f
volume/: r10d2h.f  r10vol.f  r5harv.f
volume/src/: fvsvol.f
wc/: blkdat.f  grinit.f
ws/: blkdat.f  grinit.f  sitset.f
