option('fvsvariants', type: 'array',
  choices: ['pn','wc','so','op','oc','ec','ca','nc','bm','ie','ci','ak','ws'], #,'em','tt','cr','ut','ls','cs','sn','ne'],
  value:   ['pn','wc','so','op','oc','ec','ca','nc','bm','ie','ci','ak','ws'], #,'em','tt','cr','ut','ls','cs','sn','ne'],
  # value:   ['pn','wc','so','op','oc','ec','ca','nc','bm'],
  # value: ['ie','ci','ak',],
  # value: ['pn',],
  # value: ['ws',],
  description: 'FVS variants to build'
  )